# budour

./: .gitignore  CMakeLists.txt  README  README.md
gtk2_ardour/: ardour_ui.cc  ardour_ui.h  audio_clock.cc  automation_line.cc  beatbox_gui.cc  editor_markers.cc  editor_snapshots.cc  export_report.cc  idleometer.cc  instrument_selector.cc  io_button.cc  loudness_dialog.cc  main.cc  pianoroll.cc  pianoroll.h  plugin_eq_gui.cc  rec_info_box.cc  region_view.cc  sfdb_ui.cc  step_entry.cc  transport_masters_dialog.cc  trigger_master.cc  utils.cc  wscript
gtk_gui/: CMakeLists.txt
gtk_gui/pianoroll/: CMakeLists.txt
gtk_gui/pianoroll/pianoroll/core/domain/: editing_scope.h
gtk_gui/pianoroll/pianoroll/interface/presenter/viewmodel/: pianoroll_viewmodel.cc  pianoroll_viewmodel.h
gtk_gui/pianoroll/pianoroll/viewmodel/: pianoroll_viewmodel.cc  pianoroll_viewmodel.h
gtk_gui/pianoroll/types/: editing_scope.h
gtk_gui/pianoroll/viewmodel/: pianoroll_viewmodel.cc  pianoroll_viewmodel.h
gtk_gui/reactive/: CMakeLists.txt
gtk_gui/reactive/reactive/core/application/: gtk_dispatcher.cc  gtk_dispatcher.h  gtk_observable.h
libs/: CMakeLists.txt
libs/ardour/: engine_slave.cc  ltc_slave.cc  midi_clock_slave.cc  mtc_slave.cc  session.cc  session_state.cc  transport_master.cc  triggerbox.cc  wscript
libs/ardour/ardour/: session.h
libs/di/: component.h  di_container.cc  di_container.h
libs/panners/vbap/: vbap.cc
libs/reactive/: CMakeLists.txt
tech-docs/: use-cases.md
tech-docs/requirements/: 01-03.md  05-10.md
tech-docs/workflow/: 01-03.md  05-10.md
(+17 files in other folders)
